# small-business-agents

./: .env.sample  .gitignore  .mise.toml  README.md  compose.yaml  elasticmq.conf  go.mod  go.sum
agents/: Dockerfile  agent.py  config.py  logger.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt
agents/agent/: agent.py
agents/app/: main.py
agents/docs/business_profile/: employees.yaml
agents/docs/customers/: existing_customers.yaml  potential_customers.yaml
app/: Cargo.toml  Dockerfile  clippy.toml  go.mod  go.sum  main.go  rust-toolchain.toml  rustfmt.toml
app/cmd/: create_test_event.go  root.go  send_mail.go  webhook_processor.go  webhook_receiver.go
app/pkg/events/: email.go
app/pkg/mail/: mail.go  mail_test.go
app/pkg/mail/maildata/: maildata.go  maildata.yaml
app/pkg/smtp/: auth.go  forwarding.go
app/pkg/types/: types.go
app/pkg/webhook/: handler.go  kind.go
app/pkg/webhook/events/: contact.go  email.go
app/src/: main.rs  worker.rs
app/webhook/: handler.go
db/: init.sql
docs/case1/: BusinessProfile.md  contact.md
