[package]
name = "rust_services"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json"] }
aws-config = "1.8.3"
aws-sdk-sqs = "1.78.0"
reqwest = { version = "0.12.22", features = ["json"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
